# dagster-delta

./: Makefile  requirements.txt
.github/workflows/: CI.yml
libraries/dagster-delta/: pyproject.toml
libraries/dagster-delta-polars/: pyproject.toml
libraries/dagster-delta/dagster_delta/: __init__.py  io_manager.py
libraries/dagster-unity-catalog-polars/: LICENSE  MANIFEST.in  README.md  pyproject.toml
libraries/dagster-unity-catalog-polars/dagster_unity_catalog_polars/: __init__.py  debug_unity_catalog_iomanager.py  unity_catalog_iomanager.py  utils.py
